Added score function

--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,12 @@
     <link rel="stylesheet" href="../style/main.css" />
   </head>
   <body>
+    <div class="container">
+      <p class="paragraph">
+        <span class="paragraph__text">Score: </span
+        ><span class="js-score">0</span>
+      </p>
+    </div>
     <canvas> </canvas>
   </body>
 </html>
