Fixed, when click play, game started.

--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../style/frontPage.css" />
     <script defer src="../script/navigationButtons.js"></script>
     <script defer src="../script/index.js"></script>
-    <script defer src="../script/fronMenu.js"></script>
+    <script defer src="../script/frontMenu.js"></script>
     <script
       src="https://kit.fontawesome.com/992def5dc8.js"
       crossorigin="anonymous"
