--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,7 @@
     <script defer src="../script/navigationButtons.js"></script>
     <script defer src="../script/index.js"></script>
     <script defer src="../script/frontMenu.js"></script>
+    <script defer src="../script/mouseIdle.js"></script>
     <script
       src="https://kit.fontawesome.com/992def5dc8.js"
       crossorigin="anonymous"
