--- a/html/index.html
+++ b/html/index.html
@@ -91,9 +91,9 @@
       </div>
 
       <div class="lifeCount">
-        <div><i class="fa-solid fa-heart"></i></div>
-        <div><i class="fa-solid fa-heart"></i></div>
-        <div><i class="fa-solid fa-heart"></i></div>
+        <div><i class="life1 fa-solid fa-heart"></i></div>
+        <div><i class="life2 fa-solid fa-heart"></i></div>
+        <div><i class="life3 fa-solid fa-heart"></i></div>
       </div>
     </div>
 
@@ -110,12 +110,19 @@
       </div>
 
       <div class="gameMessage__contentContainer">
-        <div class="gameMessage__content">You win !</div>
+        <div class="gameMessage__content js-message__content">You win !</div>
       </div>
 
-      <div>
-        <button class="gameMessage__nextLvBtn js-gameMessage__nextLV">
-          NEXT LV
+      <div class="gameMessage__btns">
+        <button class="gameMessage__nextLvBtn js-gameMessage__returnMenu">
+          Return to menu
+        </button>
+        <button class="gameMessage__nextLvBtn game-win js-gameMessage__nextLV">
+          Next Lv
+        </button>
+        <button class="gameMessage__nextLvBtn game-lose js-gameMessage__retry">
+          Try Again (<span class="js-lifeCount"></span
+          ><i class="fa-solid fa-heart"></i>)
         </button>
       </div>
     </div>
@@ -132,6 +139,7 @@
     <audio class="cutSceneSound" src="../assets/audio/Cutscene.mp3"></audio>
     <audio class="fruitSound" src="../assets/audio/Fruit.mp3"></audio>
     <audio class="chompSound" src="../assets/audio/Chomp.mp3"></audio>
+    <audio class="gameOverSound" src="../assets/audio/gameOver.mp3"></audio>
     <audio
       class="winningGameSound"
       src="../assets/audio/winningGame.mp3"
