Configuration saving and automatic settings restoration have been added.

--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,7 @@
     <script defer src="../script/frontMenu.js"></script>
     <script defer src="../script/mouseIdle.js"></script>
     <script defer src="../script/gameMessage.js"></script>
+    <script defer src="../script/saveAndReadConfig.js"></script>
     <script
       src="https://kit.fontawesome.com/992def5dc8.js"
       crossorigin="anonymous"
