Added option to pause the game.

--- a/html/index.html
+++ b/html/index.html
@@ -117,6 +117,15 @@
         <div>Score: <span class="js-score">0</span></div>
       </div>
 
+      <div class="pauseContainer">
+        <div class="pauseIcon js-pauseGame">
+          <i class="fa-solid fa-circle-pause fa-xl" style="color: #ffffff"></i>
+        </div>
+        <div class="pauseIcon js-playGame">
+          <i class="fa-solid fa-circle-play fa-xl" style="color: #ffffff"></i>
+        </div>
+      </div>
+
       <div class="lifeCount">
         <div><i class="life1 fa-solid fa-heart"></i></div>
         <div><i class="life2 fa-solid fa-heart"></i></div>
