Added customize input game controls style.

--- a/html/index.html
+++ b/html/index.html
@@ -65,24 +65,36 @@
         <div class="options">
           <div class="options__gameControls">
             <h2 class="settings__title">Game controls</h2>
-            <label
-              ><img
+            <label class="customize_gameControl">
+              <img
                 class="settings__gameControls"
                 src="../assets/key icons/arrows_keys.png"
                 alt="arrow keys"
               />
-              <input type="radio" class="js-keyControl-arrow" name="controls" />
+
+              <input
+                type="radio"
+                class="input_gameControl js-keyControl-arrow"
+                name="controls"
+              />
+              <span class="checkmark"></span>
             </label>
-            <label
-              ><img
+            <label class="customize_gameControl">
+              <img
                 class="settings__gameControls"
                 src="../assets/key icons/wsad_keys.png"
-                alt="wsad keys" /><input
-                class="js-keyControl-wsad"
+                alt="wsad keys"
+              />
+
+              <input
+                class="input_gameControl js-keyControl-wsad"
                 checked
                 type="radio"
                 name="controls"
-            /></label>
+              />
+
+              <span class="checkmark"></span>
+            </label>
           </div>
 
           <div class="options__gameControls">
